Use default JMX port
This also reduces some diffs in the Cassandra configuration files.