@@ -14,42 +14,39 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-
-cassandra_home=`dirname $0`/..
+if [ "x$CASSANDRA_HOME" = "x" ]; then
+    CASSANDRA_HOME="`dirname "$0"`/.."
+fi
 
 # The directory where Cassandra's configs live (required)
-CASSANDRA_CONF=$cassandra_home/conf
+if [ "x$CASSANDRA_CONF" = "x" ]; then
+    CASSANDRA_CONF="$CASSANDRA_HOME/conf"
+fi
 
 # This can be the path to a jar file, or a directory containing the 
 # compiled classes. NOTE: This isn't needed by the startup script,
 # it's just used here in constructing the classpath.
-cassandra_bin=$cassandra_home/build/classes
-#cassandra_bin=$cassandra_home/build/cassandra.jar
+cassandra_bin="$CASSANDRA_HOME/build/classes/main"
+cassandra_bin="$cassandra_bin:$CASSANDRA_HOME/build/classes/thrift"
+#cassandra_bin="$cassandra_home/build/cassandra.jar"
 
 # JAVA_HOME can optionally be set here
 #JAVA_HOME=/usr/local/jdk6
 
 # The java classpath (required)
-CLASSPATH=$CASSANDRA_CONF:$cassandra_bin
+CLASSPATH="$CASSANDRA_CONF:$cassandra_bin"
 
-for jar in $cassandra_home/lib/*.jar; do
-    CLASSPATH=$CLASSPATH:$jar
+for jar in "$CASSANDRA_HOME"/lib/*.jar; do
+    CLASSPATH="$CLASSPATH:$jar"
 done
 
-# Arguments to pass to the JVM
-JVM_OPTS=" \
-        -ea \
-        -Xms128M \
-        -Xmx1G \
-        -XX:TargetSurvivorRatio=90 \
-        -XX:+AggressiveOpts \
-        -XX:+UseParNewGC \
-        -XX:+UseConcMarkSweepGC \
-        -XX:+CMSParallelRemarkEnabled \
-        -XX:+HeapDumpOnOutOfMemoryError \
-        -XX:SurvivorRatio=128 \
-        -XX:MaxTenuringThreshold=0 \
-        -Dcom.sun.management.jmxremote.port=APPSCALE-JMX-PORT \
-        -Dcom.sun.management.jmxremote.port=6666 \
-        -Dcom.sun.management.jmxremote.ssl=false \
-        -Dcom.sun.management.jmxremote.authenticate=false"
+# set JVM javaagent opts to avoid warnings/errors
+if [ "$JVM_VENDOR" != "OpenJDK" -o "$JVM_VERSION" \> "1.6.0" ] \
+      || [ "$JVM_VERSION" = "1.6.0" -a "$JVM_PATCH_VERSION" -ge 23 ]
+then
+    JAVA_AGENT="$JAVA_AGENT -javaagent:$CASSANDRA_HOME/lib/jamm-0.2.5.jar"
+fi
+
+# Allow any connections on the JMX port.
+JVM_OPTS="$JVM_OPTS -Dcom.sun.management.jmxremote.ssl=false\
+  -Dcom.sun.management.jmxremote.authenticate=false"
